--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,9 +26,10 @@ and open the template in the editor.
             <p1 class="how">I like to play Basketball, Ultimate Frisbee and Football.</p1><br /> 
                  <p2 class="hou">I also like to learn new things and play Video Games.</p2>
             <img class="ttt" src="cod/cod.jpg">
+            <img src='images/bruh doe.gif'>
         </article>
     </body>
 </html>
 
       
-   
+    
