--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+
     <head>
         <title>Projects</title>
         <meta charset="UTF-8">
@@ -18,9 +18,14 @@ and open the template in the editor.
     </nav>
     <body> 
         <header>
-        
-        <h3>This is my new projects page. Please give me some code.</h3>
+        <h1>Projects</h1>
         </header>
+        <p>This is my only project I have done so far.<br /> 
+           I made a website about me and about how I was able to make this website.</p>
+        <article>
+            <img src="images/yu.png">
+        </article>
     </body>
+
     
-</html>
+
