--- a/public_html/tech.html
+++ b/public_html/tech.html
@@ -16,7 +16,16 @@ and open the template in the editor.
         <a class="ti" href="projects.html">PROJECTS</a>
         <a class="ii" href="http://theappacademy.us">APP ACADEMY WEBSITE</a>
     </nav>
-    <body>
-        <h1>the programs i use are</h1>
+    <body class="ww">
+        <h1>Technology</h1>
+        <p>CSS (Cascading Style Sheets) - A style sheet language used for 
+describing<br /> the look and formatting of a document written in a markup language.<br />
+HTML(Hypertext Markup Language) -  A standardized system for 
+tagging text<br /> files to achieve font, color, graphic, and hyperlink effects on World Wide Web pages.</p>
     </body>
+    <article>
+        <a class="aaa" href='http://www.w3.org/TR/html5/'>HTML Website</a>
+        <a href="http://www.w3.org/Style/CSS/Overview.en.html">CSS website</a>
+        <img src='images/buh life.gif'>
+    </article>
 </html>
