--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,12 +21,11 @@ and open the template in the editor.
         </header>
         <article>
             <h1 class="buy">About Me</h1>
-            <p3 class="qq" class="hi">My name is Nathan Hirata and 
+            <p3 class="qq">My name is Nathan Hirata and 
                 I am a student at Pasadena High School.</p3><br />
             <p1 class="how">I like to play Basketball, Ultimate Frisbee and Football.</p1><br /> 
                  <p2 class="hou">I also like to learn new things and play Video Games.</p2>
-            <img class="ttt" src="cod/cod.jpg">
-            <img src='images/bruh doe.gif'>
+            <img class="ttt" src="cod/cod.jpg">           
         </article>
     </body>
 </html>
