--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -18,12 +18,12 @@ and open the template in the editor.
     </nav>
     <body> 
         <header>
-        <h1>Projects</h1>
+        <h1 class='gray'>Projects</h1>
         </header>
-        <p>This is my only project I have done so far.<br /> 
-           I made a website about me and about how I was able to make this website.</p>
+        <p1 class='pc'>This is my only project I have done so far.</p1><br /> 
+        <p2 class='px'>I made a website about me and about how I was able to make this website.</p2>
         <article>
-            <img src="images/yu.png">
+            <img class="pz" src="images/yu.png">
         </article>
     </body>
 
