--- a/public_html/tech.html
+++ b/public_html/tech.html
@@ -17,15 +17,20 @@ and open the template in the editor.
         <a class="ii" href="http://theappacademy.us">APP ACADEMY WEBSITE</a>
     </nav>
     <body class="ww">
-        <h1>Technology</h1>
-        <p>CSS (Cascading Style Sheets) - A style sheet language used for 
-describing<br /> the look and formatting of a document written in a markup language.<br />
-HTML(Hypertext Markup Language) -  A standardized system for 
-tagging text<br /> files to achieve font, color, graphic, and hyperlink effects on World Wide Web pages.</p>
+        <h1 class='graytwo'>Technology</h1>
+    <p1 class='one'>CSS (Cascading Style Sheets)</p1><br/>
+    <p2 class='four'>A style sheet language used for</p2><br/>
+    <p3 class='three'>describing the look and formatting</p3><br/> 
+    <p4 class='two'>of a document written in a markup language.</p4><br/>
+    <p5 class='five'>HTML(Hypertext Markup Language)</p5><br/>
+    <p6 class='six'>A standardized system for tagging</p6><br/>
+    <p7 class='four'>text files to achieve font, color,</p7><br/>
+    <p8 class='seven'>graphic, and hyperlink effects on</p8><br/>
+    <p9 class='nine'>World Wide Web pages.</p9><br/>
     </body>
     <article>
         <a class="aaa" href='http://www.w3.org/TR/html5/'>HTML Website</a>
-        <a href="http://www.w3.org/Style/CSS/Overview.en.html">CSS website</a>
-        <img src='images/buh life.gif'>
+        <a class="qqq" href="http://www.w3.org/Style/CSS/Overview.en.html">CSS website</a><br />
+        <img class='for' src='images/buh life.gif'>
     </article>
 </html>
