--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,19 +13,19 @@ and open the template in the editor.
     </head>
     <body>
         <header>
-            <nav>
+            <nav><!-- These are my links to other pages in my website--> 
                 <a class="aa" href="projects.html">PROJECTS</a>
                 <a class="you" href="tech.html">TECHNOLOGY</a>
                 <a class="ii" href="http://theappacademy.us">APP ACADEMY WEBSITE</a>
             </nav>
         </header>
-        <article>
+        <article><!--This is my short paragraph about me-->
             <h1 class="buy">About Me</h1>
             <p3 class="qq">My name is Nathan Hirata and 
                 I am a student at Pasadena High School.</p3><br />
             <p1 class="how">I like to play Basketball, Ultimate Frisbee and Football.</p1><br /> 
                  <p2 class="hou">I also like to learn new things and play Video Games.</p2>
-            <img class="ttt" src="cod/cod.jpg">           
+            <img class="ttt" src="cod/cod.jpg"><!--This is a picture of something i like-->           
         </article>
     </body>
 </html>
