--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -11,19 +11,19 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/style.css">
     </head>
-    <nav>
+    <nav><!--these are links to my other pages-->
         <a class="pp" href="index.html">ABOUT</a>
         <a class="you" href="tech.html">TECHNOLOGY</a>
         <a class="ii" href="http://theappacademy.us">APP ACADEMY WEBSITE</a>
     </nav>
     <body> 
-        <header>
+        <header><!--this is my short sentences for my projects page-->
         <h1 class='gray'>Projects</h1>
         </header>
         <p1 class='pc'>This is my only project I have done so far.</p1><br /> 
         <p2 class='px'>I made a website about me and about how I was able to make this website.</p2>
         <article>
-            <img class="pz" src="images/yu.png">
+            <img class="pz" src="images/yu.png"><!--This is a screenshot of my index page-->
         </article>
     </body>
 
