--- a/public_html/tech.html
+++ b/public_html/tech.html
@@ -11,12 +11,12 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/style.css">
     </head>
-    <nav>
+    <nav><!--links to my other pages-->
         <a class="nn" href="index.html">ABOUT</a>
         <a class="ti" href="projects.html">PROJECTS</a>
         <a class="ii" href="http://theappacademy.us">APP ACADEMY WEBSITE</a>
     </nav>
-    <body class="ww">
+    <body class="ww"><!--this is my definitions of css and html-->
         <h1 class='graytwo'>Technology</h1>
     <p1 class='one'>CSS (Cascading Style Sheets)</p1><br/>
     <p2 class='four'>A style sheet language used for</p2><br/>
@@ -28,7 +28,7 @@ and open the template in the editor.
     <p8 class='seven'>graphic, and hyperlink effects on</p8><br/>
     <p9 class='nine'>World Wide Web pages.</p9><br/>
     </body>
-    <article>
+    <article><!--these are links to the websites of html and css and theres a picture of css and html-->
         <a class="aaa" href='http://www.w3.org/TR/html5/'>HTML Website</a>
         <a class="qqq" href="http://www.w3.org/Style/CSS/Overview.en.html">CSS website</a><br />
         <img class='for' src='images/buh life.gif'>
